tailwind, package.json, config.js 파일 추가

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,13 @@
+
+/**
+ * This injects Tailwind's base styles and any base styles registered by
+ * plugins.
+ */
+ @tailwind base;
+ @tailwind components;
+ @tailwind utilities;
+
+/*
 html,
 body {
   padding: 0;
@@ -24,3 +34,4 @@ a {
     background: black;
   }
 }
+*/
