[feat] 스크린 최대 너비, 최소 너비 설정

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,3 +3,9 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
 @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.6/dist/web/static/pretendard.css');
+
+html {
+  max-width: 448px;
+  min-width: 360px;
+  margin: 0 auto;
+}
