--- a/components/Select/Select.module.scss
+++ b/components/Select/Select.module.scss
@@ -1,5 +1,5 @@
 .select {
-  @apply w-[106.33px] border-g4 border-solid border-[1px] rounded-[2px] bg-g0 h-[48px] focus:border-g6 pl-[12px] font-pretendard font-normal;
+  @apply max-w-[106.33px] w-full border-g4 border-solid border-[1px] rounded-[2px] bg-g0 h-[48px] focus:border-g6 pl-[12px] font-pretendard font-normal;
 
   -moz-appearance: none; /* Firefox */
   -webkit-appearance: none; /* Safari and Chrome */
@@ -13,7 +13,7 @@
   }
 
   &.lg {
-    @apply w-default;
+    @apply max-w-default;
   }
 
   &:focus {
