--- a/components/Button/Button.module.scss
+++ b/components/Button/Button.module.scss
@@ -1,17 +1,25 @@
+// .button {
+//   @apply inline-flex items-center justify-center px-4 py-2 text-sm font-bold text-center
+//   border-g4 border-solid border-[1px] rounded-[2px] bg-g0 transition duration-300 w-full
+//   bg-yellow-500 hover:bg-yellow-600 text-white;
+
+//   &.primary-button {
+//     @apply bg-blue-500 text-white;
+
+//     &:hover {
+//       @apply bg-blue-600;
+//     }
+
+//     &:disabled {
+//       @apply bg-gray-400 cursor-not-allowed;
+//     }
+//   }
+// }
+
 .button {
-  @apply inline-flex items-center justify-center px-4 py-2 text-sm font-bold text-center 
-  border-g4 border-solid border-[1px] rounded-[2px] bg-g0 transition duration-300 w-full
-  bg-yellow-500 hover:bg-yellow-600 text-white;
-  
-  &.primary-button {
-    @apply bg-blue-500 text-white;
+  @apply w-default bg-r1 h-[54px] rounded-[2px] px-[13px] font-pretendard font-normal text-[18px] text-g0;
 
-    &:hover {
-      @apply bg-blue-600;
-    }
-
-    &:disabled {
-      @apply bg-gray-400 cursor-not-allowed;
-    }
+  &:disabled {
+    @apply bg-g2 text-g4;
   }
 }
