[feat] tainwild.config.js (사이즈 추가)

--- a/components/Button/Button.module.scss
+++ b/components/Button/Button.module.scss
@@ -1,14 +1,14 @@
 .button {
-  @apply h-[54px] rounded-[2px] font-pretendard font-normal text-[18px];
+  @apply h-[54px] rounded-[2px] font-pretendard text-[18px] font-bold;
 
   &.lg {
-    @apply w-max px-[13px];
+    @apply w-default px-[13px];
   }
   &.md {
-    @apply w-default px-[12px];
+    @apply w-medium px-[12px];
   }
   &.sm {
-    @apply w-min px-[11px];
+    @apply w-small px-[11px];
   }
 
   &.r1 {
@@ -23,8 +23,16 @@
     @apply bg-g2 text-g4;
   }
 
+  &.disabled {
+    @apply bg-g2 text-g3;
+  }
+
+  &.noBg {
+    @apply bg-transparent border border-solid border-r1 rounded-[2px] text-r1 font-bold;
+  }
+
   &.none {
-    @apply bg-transparent font-black border-none text-r1;
+    @apply bg-transparent font-black border-none text-black;
   }
   
 }
