--- a/components/Image/CustomImage.module.scss
+++ b/components/Image/CustomImage.module.scss
@@ -1,7 +1,11 @@
 .custom-image {
-    @apply relative h-0 pb-[56.25%];
-  }
+  @apply relative h-0 pb-[56.25%];
+}
   
-  .custom-image > :global(img) {
-    @apply rounded-md;
-  }
+.custom-image > :global(img) {
+  @apply rounded-md;
+}
+
+.footer {
+  @apply w-footerImg h-footerImg left-2.5 top-[20%]
+}
