--- a/components/Link/HyperLink.module.scss
+++ b/components/Link/HyperLink.module.scss
@@ -1,7 +1,5 @@
 .link {
-  @apply inline-flex items-center justify-center px-4 py-2 text-sm font-bold text-center 
-  border-g4 border-solid border-[1px] rounded-[2px] bg-g0 transition duration-300 w-full
-  bg-yellow-500 hover:bg-yellow-600 text-white;
+  @apply  text-g5 underline
 }
 
 .outerLink {
