--- a/components/Select/Select.module.scss
+++ b/components/Select/Select.module.scss
@@ -4,7 +4,7 @@
   -moz-appearance: none; /* Firefox */
   -webkit-appearance: none; /* Safari and Chrome */
   appearance: none;
-  background-image: url('/icons/arrow-down.png');
+  background-image: url('/icons/arrow-down.svg');
   background-repeat: no-repeat;
   background-position: right 10px center;
 
