[feat] next12 버전으로 원복하였다

--- a/components/layout/AppLayout.module.scss
+++ b/components/layout/AppLayout.module.scss
@@ -4,7 +4,7 @@
   }
 
   &.width {
-    @apply max-w-[448px] min-w-[360px] mx-auto;
+    @apply max-w-[448px] min-w-[360px] mx-auto w-full;
 
     @media (max-width: 448px) {
       width: 500px;
