[feat] 일단 signup 페이지 하던것..

--- a/components/Typography/Typography.module.scss
+++ b/components/Typography/Typography.module.scss
@@ -1,5 +1,5 @@
 .header {
-  @apply font-poppins font-semibold text-[24px];
+  @apply font-poppins font-semibold text-[24px] text-g7;
 }
 
 .title {
