--- a/components/layouts/AppLayout/AppLayout.module.scss
+++ b/components/layouts/AppLayout/AppLayout.module.scss
@@ -4,10 +4,6 @@
   }
 
   &.width {
-    @apply max-w-[448px] min-w-[360px] mx-auto w-full;
-
-    @media (max-width: 448px) {
-      width: 500px;
-    }
+    @apply max-w-[440px] min-w-[320px] mx-auto w-full px-[20px];
   }
 }
