--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -1,3 +1,14 @@
 .logo {
-  @apply ml-[19.5px] w-[110px] h-[26.46px] mt-[13.32px];
+  @apply w-[110px] h-[26.46px] mt-[13.32px];
+}
+
+.container {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  max-width: 440px;
+  padding-left: 20px;
+  padding-right: 20px;
 }
