--- a/components/Input/Input.module.scss
+++ b/components/Input/Input.module.scss
@@ -1,5 +1,5 @@
 .input {
-  @apply border-g4 border-solid border-[1px] rounded-[2px] bg-g0 max-w-default w-full h-[48px] focus:border-g6 placeholder-g4 pl-[12px] font-pretendard font-normal;
+  @apply border-g4 border-solid border-[1px] rounded-[2px] bg-g0 w-full h-[48px] focus:border-g6 placeholder-g4 pl-[12px] font-pretendard font-normal;
 
   &.error {
     @apply border-a1;
@@ -14,5 +14,5 @@
 }
 
 .warning {
-  @apply text-a1 font-pretendard text-[14px] max-w-default h-[14px] mt-[4px];
+  @apply text-a1 font-pretendard text-[14px] h-[14px] mt-[4px];
 }
