--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -3,7 +3,7 @@ input:focus {
 }
 
 body {
-  @apply justify-center max-w-[448px] min-w-[360px];
+  @apply justify-center max-w-max min-w-[320px];
 
   margin-left: auto !important;
   margin-right: auto !important;
