[feat] Filter page 추가, Button Component 다시 봐야할 듯..

--- a/components/Button/Button.module.scss
+++ b/components/Button/Button.module.scss
@@ -10,7 +10,12 @@
   &.sm {
     @apply w-small px-[11px];
   }
-
+  &.reset {
+    @apply h-[54px] w-[110px] rounded-[2px] font-pretendard bg-transparent border border-solid border-r1 text-r1 font-semibold text-[18px]
+  }
+  &.apply {
+    @apply bg-r1 w-[233px] text-g0 font-semibold h-[54px] rounded-[2px] border-r1 font-pretendard border-solid
+  }
   &.r1 {
     @apply bg-r1 text-g0;
   }
@@ -35,3 +40,11 @@
     @apply bg-transparent font-black border-none text-black;
   }
 }
+.reset {
+  @apply h-[54px] w-[110px] rounded-[2px] font-pretendard bg-transparent border border-solid border-r1 text-r1 font-semibold text-[18px];
+}
+
+.submit {
+  @apply bg-r1 w-[233px] text-g0 font-semibold h-[54px] rounded-[2px] border-r1 font-pretendard border-solid
+}
+
