--- a/pages/room/room.module.scss
+++ b/pages/room/room.module.scss
@@ -7,3 +7,9 @@
     width: 100%;
   }
 }
+
+.tag {
+  @apply absolute z-10 bottom-[14px] right-[19.5px] rounded-[4px] px-[2px] py-[4px] text-g1 text-[12px];
+
+  background: rgba(33, 33, 33, 0.5);
+}
