--- a/components/Button/Button.module.scss
+++ b/components/Button/Button.module.scss
@@ -1,5 +1,5 @@
 .button {
-  @apply h-[54px] rounded-[2px] font-pretendard text-[18px] font-semibold;
+  @apply rounded-[2px] font-pretendard text-[18px] font-semibold;
 
   &.lg {
     @apply w-full px-[13px];
