--- a/components/Select/Select.module.scss
+++ b/components/Select/Select.module.scss
@@ -4,7 +4,7 @@
   -moz-appearance: none; /* Firefox */
   -webkit-appearance: none; /* Safari and Chrome */
   appearance: none;
-  background-image: url('/icons/arrow-down.svg');
+  background-image: url('/icons/dropdown.svg');
   background-repeat: no-repeat;
   background-position: right 10px center;
 
@@ -21,6 +21,6 @@
   }
 
   &.disabled {
-    @apply bg-g4 text-g3
+    @apply bg-g3 text-g4;
   }
 }
