[feat] 버튼 스타일 수정

--- a/components/Button/Button.module.scss
+++ b/components/Button/Button.module.scss
@@ -33,7 +33,7 @@
   }
 
   &.noBg {
-    @apply bg-transparent border border-solid border-r1 rounded-[2px] text-r1 font-bold;
+    @apply bg-g0 border border-solid border-r1 rounded-[2px] text-r1 font-bold;
   }
 
   &.none {
