[fix] 파란색 하이라이트 안 뜨도록 수정

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,5 +1,12 @@
-input:focus {
+input:focus,
+button:focus,
+div:focus {
   outline: none;
+  box-shadow: none;
+}
+
+* {
+  -webkit-tap-highlight-color: transparent;
 }
 
 body {
