--- a/components/Calendar/custom-calendar.scss
+++ b/components/Calendar/custom-calendar.scss
@@ -27,7 +27,7 @@
       font-feature-settings: 'clig' off, 'liga' off;
 
       /* Headline/H4 */
-      font-family: Inter;
+      font-family: Pretendard;
       font-size: 18px;
       font-style: normal;
       font-weight: 600;
@@ -50,7 +50,7 @@
       font-feature-settings: 'clig' off, 'liga' off;
       height: 32px;
 
-      font-family: Inter;
+      font-family: Pretendard;
       font-size: 10px;
       font-style: normal;
       font-weight: 500;
@@ -75,7 +75,7 @@
       font-feature-settings: 'clig' off, 'liga' off;
 
       /* Functional/Input/I2 */
-      font-family: Inter;
+      font-family: Pretendard;
       font-size: 14px;
       font-style: normal;
       font-weight: 500;
