[feat] step3 연동 완료

--- a/components/Button/Button.module.scss
+++ b/components/Button/Button.module.scss
@@ -41,7 +41,7 @@
   }
 
   &.outlined {
-    @apply bg-g0 border border-solid border-g4 rounded-[2px] text-n700 font-semibold;
+    @apply bg-g0 border border-solid border-g4 rounded-[2px] font-semibold text-g5;
   }
 }
 .reset {
