--- a/components/Modal/Modal.module.scss
+++ b/components/Modal/Modal.module.scss
@@ -1,5 +1,5 @@
 .modal-wrap {
-  @apply bg-g0 w-default rounded-[4px] shadow-[0_16px_32px_rgba(0,0,0,0.08)] p-[16px] pt-[20px] justify-center items-center text-center gap-[20px] absolute top-[50%] left-[50%];
+  @apply text-g7 font-bold bg-g0 w-default rounded-[4px] shadow-[0_16px_32px_rgba(0,0,0,0.08)] p-[16px] pt-[20px] justify-center items-center text-center gap-[20px] absolute top-[50%] left-[50%];
 
   transform: translate(-50%, -50%);
 
