[feat] filter 적용 추가 및 filter 다이얼로그의 input 앞에 통화 붙이는 작업 중

--- a/components/Input/Input.module.scss
+++ b/components/Input/Input.module.scss
@@ -9,6 +9,14 @@
   }
 }
 
+.input::before {
+  content: '$';
+  position: absolute;
+  left: 10px; /* 원하는 위치로 조절 */
+  top: 50%; /* 수직 가운데 정렬 */
+  transform: translateY(-50%);
+}
+
 .eye {
   @apply w-[24px] h-[24px];
 }
