--- a/components/Button/Button.module.scss
+++ b/components/Button/Button.module.scss
@@ -1,5 +1,5 @@
 .button {
-  @apply rounded-[2px] font-pretendard text-[18px] font-semibold;
+  @apply rounded-[2px] font-pretendard text-[18px];
 
   &.lg {
     @apply w-full px-[13px];
@@ -11,10 +11,10 @@
     @apply w-small px-[11px];
   }
   &.reset {
-    @apply h-[54px] w-[110px] rounded-[2px] font-pretendard bg-transparent border border-solid border-r1 text-r1 font-semibold text-[18px];
+    @apply h-[54px] w-[110px] rounded-[2px] font-pretendard bg-transparent border border-solid border-r1 text-r1 text-[18px];
   }
   &.apply {
-    @apply bg-r1 w-[217px] text-g0 font-semibold h-[54px] rounded-[2px] border-r1 font-pretendard border-solid;
+    @apply bg-r1 w-[217px] text-g0 h-[54px] rounded-[2px] border-r1 font-pretendard border-solid;
   }
   &.r1 {
     @apply bg-r1 text-g0;
@@ -33,7 +33,7 @@
   }
 
   &.noBg {
-    @apply bg-g0 border border-solid border-r1 rounded-[2px] text-r1 font-semibold;
+    @apply bg-g0 border border-solid border-r1 rounded-[2px] text-r1;
   }
 
   &.none {
@@ -41,15 +41,15 @@
   }
 
   &.outlined {
-    @apply bg-g0 border border-solid border-g4 rounded-[2px] font-semibold text-g5;
+    @apply bg-g0 border border-solid border-g4 rounded-[2px] text-g5;
   }
 }
 .reset {
-  @apply h-[54px] w-[110px] rounded-[2px] font-pretendard bg-transparent border border-solid border-r1 text-r1 font-semibold text-[18px];
+  @apply h-[54px] w-[110px] rounded-[2px] font-pretendard bg-transparent border border-solid border-r1 text-r1 text-[18px];
 }
 
 .submit {
-  @apply bg-r1 w-[233px] text-g0 font-semibold h-[54px] rounded-[2px] border-r1 font-pretendard border-solid;
+  @apply bg-r1 w-[233px] text-g0 h-[54px] rounded-[2px] border-r1 font-pretendard border-solid;
 }
 
 .button-wrapper {
